    usage of the event system; instance-level
    collections are no longer created for a
    particular type of event until
    instance-level listeners are established
    for that event.  [ticket:2516]

  - [bug] Added gaerdbms import to mysql/__init__.py,
    the absense of which was preventing the new
    GAE dialect from being loaded.  [ticket:2529]

  - [bug] Fixed the repr() of Enum to include
    the "name" and "native_enum" flags.  Helps
    Alembic autogenerate.

- mysql
  - [bug] Updated mysqlconnector interface to use
    updated "client flag" and "charset" APIs,
    courtesy David McNelis.

- mssql
  - [bug] Fixed compiler bug whereby a given
    select() would be modified if it had an "offset"
    attribute, causing the construct to not compile
    correctly a second time.  [ticket:2545]

0.7.8
=====
- orm
  - [bug] Fixed bug whereby subqueryload() from
    a polymorphic mapping to a target would incur
    a new invocation of the query for each
    distinct class encountered in the polymorphic
    result.  [ticket:2480]

  - [bug] Fixed bug in declarative
    whereby the precedence of columns
    in a joined-table, composite
    column (typically for id) would fail to
    be correct if the columns contained
    names distinct from their attribute
    names.  This would cause things like
    primaryjoin conditions made against the
    entity attributes to be incorrect.  Related
    to [ticket:1892] as this was supposed
    to be part of that, this is [ticket:2491].

  - [feature] The 'objects' argument to
    flush() is no longer deprecated, as some
    valid use cases have been identified.

  - [bug] Fixed identity_key() function which
    was not accepting a scalar argument
    for the identity.  [ticket:2508].

  - [bug] Fixed bug whereby populate_existing
    option would not propagate to subquery
    eager loaders.  [ticket:2497].

- sql
  - [bug] added BIGINT to types.__all__,
    BIGINT, BINARY, VARBINARY to sqlalchemy